feat: create task at database

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
+    "no-duplicate-imports": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
     "no-underscore-dangle": "off",
