--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
     "prepare": "husky install",
     "coverage": "cross-env BABEL_ENV=test jest --coverage",
-    "build-types": "tsc"
+    "check-types": "tsc --noEmit"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -76,6 +76,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mf-app/utility": "^1.2.1",
     "@mui/material": "^5.10.3",
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.4",
